Fix styles for favorite/approved content; Fix styles and scrollbar of score modal; Add padding between contents into neuron page;

--- a/app/styles/content/content.scss
+++ b/app/styles/content/content.scss
@@ -132,6 +132,7 @@
     }
     &.moi_theme {
       box-shadow: -8px 0 25px #767673e0;
+      padding-right: 2%;
       slide-gallery {
         ion-slide {
           .col {
