--- a/app/styles/neuron/neuron.scss
+++ b/app/styles/neuron/neuron.scss
@@ -13,11 +13,10 @@
 
   .frame-container {
     position: absolute;
-    width: 95%;
+    width: 90%;
     height: 88%;
     overflow: auto;
-    margin-top: 2%;
-    margin-left: 3%;
-    margin-right: 2%;
+    margin-top: 3%;
+    margin-left: 5%;
   }
 }
