--- a/app/styles/shared/widgets-tree.scss
+++ b/app/styles/shared/widgets-tree.scss
@@ -1,7 +1,7 @@
 .tree-percentage {
   position: absolute;
   top: 8%;
-  right: 3%;
+  right: 4%;
   -webkit-animation-iteration-count: 4;
 
   .percentage-container {
