--- a/app/styles/tasks/tasks.scss
+++ b/app/styles/tasks/tasks.scss
@@ -126,7 +126,7 @@
               position: relative;
               .content-kind-contents {
                 border-radius: 10px;
-                color: $verde;
+                color: $secondary;
 
                 img {
                   object-fit: cover;
