--- a/app/styles/test/score.scss
+++ b/app/styles/test/score.scss
@@ -33,9 +33,8 @@
   .text-container{
     padding: 20px;
     background: $tertiary;
-    margin: 20px;
-    margin-top: 40px;
-    height: 220px;
+    margin: 2%;
+    height: 90%;
     overflow: auto;
     #title{
       font-size: 30px;
@@ -51,7 +50,7 @@
   }
   .text-containert::-webkit-scrollbar-track {
     border-radius: 10px;
-    border: 1px solid rgb(243, 248, 93);
+    border: 1px solid $scroll-color;
     width: 5px;
   }
   .text-container::-webkit-scrollbar {
@@ -61,7 +60,7 @@
   }
   .text-container::-webkit-scrollbar-thumb {
     border-radius: 25px;
-    background-color: rgb(243, 248, 93);
+    background-color: $scroll-color;
   }
 }
 
