--- a/app/styles/tree/tree.scss
+++ b/app/styles/tree/tree.scss
@@ -122,8 +122,8 @@ a {
   .app-content {
     .back-arrow {
       .arrow-img {
-        bottom: 13%;
-        left: 13%;
+        bottom: 10%;
+        left: 20%;
       }
     }
   }
